feat: Implement game reset and new game functionality
- Added resetToFirstLevel function to reset the game to level 1.
- Increased GAME_TIMEOUT_MINUTES from 1 to 10 for longer gameplay.
- Introduced gameRunning flag and gameLoopId to manage game loop state.
- Updated startGame function to reset game state and initialize enemies.
- Enhanced handleNetworkMessage to handle level changes and enemy actions.
- Modified gameLoop to continue only if the game is running.
- Added stopGame function to properly stop the game loop.
- Implemented newGame functionality to allow players to start a new game.
- Adjusted canvas dimensions and wall positions for consistency.
- Updated tank movement speed to use FRAME_SPEEDS for better control.

--- a/public/index.html
+++ b/public/index.html
@@ -162,14 +162,14 @@
     <div id="connectionStatus" class="status waiting">Connexion au serveur...</div>
   </div>
   
-  <canvas width="800" height="600"></canvas>
+  <canvas width="736" height="600"></canvas>
   <div id="gameInfo">
     <div>Rôle: <span id="playerRole">-</span></div>
     <div>Joueurs connectés: <span id="playersCount">0</span>/2</div>
     <div>Niveau: <span id="levelInfo">1/20</span></div>
-    <div>Balles restantes: <span id="remainingBullets">4</span>/4</div>
-    <div>Temps de jeu: <span id="gameTime">5:00</span></div>
+    <div>Balles restantes: <span id="remainingBullets">4</span>/4</div>    <div>Temps de jeu: <span id="gameTime">5:00</span></div>
     <button id="stopGameBtn" style="display: none; margin-top: 10px;">Arrêter la partie</button>
+    <button id="newGameBtn" style="margin-top: 10px; background: linear-gradient(45deg, #4CAF50, #45a049);">Nouvelle partie</button>
     <button id="nextLevelBtn" style="margin-top: 10px; background: linear-gradient(45deg, #2196F3, #1976D2);">Niveau suivant</button>
   </div>
   
